Fix input focus issue on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ th {
     color: white;
 }
 
-#area-calc {
+button {
     margin-top: 10px;
     margin-bottom: 10px;
 }
